<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>

    <item android:title="@string/favorite"
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_favorite_border_24"
        app:showAsAction="collapseActionView|always"/>

    <item android:title="@string/settings"
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="collapseActionView|ifRoom"/>
</menu>